--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  //编译包含的文件 /./src/**/*   ** 表示任意目录 *表示任意文件
+  "include":
+    [
+      "./src/**/*"
+    ]  ,
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
@@ -95,6 +100,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true                             /* Skip type checking all .d.ts files. */
+
   }
 }
